--- a/apps/vectorize/package.json
+++ b/apps/vectorize/package.json
@@ -6,7 +6,11 @@
     "deploy": "wrangler deploy src/index.ts",
     "start": "wrangler dev",
     "test:types": "tsc --noEmit",
-    "wrangler": "wrangler"
+    "wrangler": "wrangler",
+    "db:init": "npx wrangler d1 migrations create llm-rss-vectorise-agent init",
+    "db:migrate": "npx wrangler d1 migrations apply llm-rss-vectorise-agent",
+    "db:prisma:migrate": "npx prisma migrate diff --script --from-empty --to-schema-datamodel ./prisma/schema.prisma",
+    "db:prisma:generate": "npx prisma generate"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240712.0",
@@ -14,6 +18,9 @@
     "wrangler": "^3.64.0"
   },
   "dependencies": {
-    "fast-xml-parser": "^4.4.1"
+    "@prisma/adapter-d1": "^5.18.0",
+    "@prisma/client": "^5.18.0",
+    "fast-xml-parser": "^4.4.1",
+    "prisma": "^5.18.0"
   }
 }
