--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -22,6 +22,7 @@
     "@remix-run/react": "^2.11.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "intl-parse-accept-language": "^1.0.0",
     "isbot": "^5.1.17",
     "lucide-react": "^0.435.0",
     "react": "^18.3.1",
