--- a/apps/vectorize/package.json
+++ b/apps/vectorize/package.json
@@ -13,7 +13,6 @@
     "db:prisma:generate": "npx prisma generate"
   },
   "devDependencies": {
-    "@cloudflare/puppeteer": "^0.0.13",
     "@cloudflare/workers-types": "^4.20240712.0",
     "typescript": "^5.5.4",
     "wrangler": "^3.72.2"
@@ -21,6 +20,7 @@
   "dependencies": {
     "@prisma/adapter-d1": "^5.18.0",
     "@prisma/client": "^5.18.0",
+    "cheerio": "^1.0.0",
     "fast-xml-parser": "^4.4.1",
     "prisma": "^5.18.0"
   }
