--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -10,9 +10,9 @@
   "compilerOptions": {
     "lib": ["DOM", "DOM.Iterable", "ES2022"],
     "types": [
-        "@remix-run/cloudflare",
-        "vite/client",
-        "@cloudflare/workers-types/2023-07-01"
+      "@remix-run/cloudflare",
+      "vite/client",
+      "@cloudflare/workers-types/2023-07-01"
     ],
     "isolatedModules": true,
     "esModuleInterop": true,
@@ -29,7 +29,7 @@
     "paths": {
       "~/*": ["./app/*"]
     },
-
+    "noImplicitAny": false,
     // Vite takes care of building everything, not tsc.
     "noEmit": true
   }
