chore(wip): starting work on summarising and analysing

--- a/apps/vectorize/wrangler.toml.example
+++ b/apps/vectorize/wrangler.toml.example
@@ -3,6 +3,8 @@ name = "llm-rss-vectorise-agent-vectorize"
 main = "src/index.ts"
 compatibility_date = "2023-09-22"
 
+logpush = true
+
 [[vectorize]]
 binding = "VECTORIZE"
 index_name = "llm-rss-embeddings"
