--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -35,6 +35,7 @@
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240821.1",
     "@remix-run/dev": "^2.11.2",
+    "@tailwindcss/typography": "^0.5.14",
     "@types/react": "^18.3.4",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^8.2.0",
