--- a/apps/web/wrangler.toml.example
+++ b/apps/web/wrangler.toml.example
@@ -3,6 +3,9 @@ name = "llm-rss-vectorise-agent-web"
 compatibility_date = "2024-08-21"
 pages_build_output_dir = "./build/client"
 
+[vars]
+ENVIRONMENT = "development"
+
 [[d1_databases]]
 binding = "DB"
 database_name = "llm-rss-vectorise-agent"
